add shared and back-shared to libs

--- a/libs/back-shared/tsconfig.lib.json
+++ b/libs/back-shared/tsconfig.lib.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "sourceMap": false,
     "outDir": "../../dist/out-tsc",
-    "allowJs": true
+    "types": []
   },
-  "include": ["src/**/*.ts", "src/**/*.js"]
+  "exclude": ["**/*.spec.ts"],
+  "include": ["**/*.ts"]
 }
