--- a/package.json
+++ b/package.json
@@ -28,40 +28,51 @@
   "private": true,
   "dependencies": {
     "document-register-element": "1.13.1",
+    "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "purify-ts": "^0.15.1",
+    "ramda": "^0.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "express": "4.17.1"
+    "redis": "^3.0.2",
+    "uuid": "^8.1.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
-    "@nrwl/workspace": "9.3.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "2.0.4",
-    "@nrwl/react": "9.3.0",
+    "@nrwl/eslint-plugin-nx": "9.3.0",
     "@nrwl/express": "9.3.0",
     "@nrwl/jest": "9.3.0",
-    "jest": "25.2.3",
-    "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.3.0",
+    "@nrwl/node": "9.3.0",
+    "@nrwl/react": "9.3.0",
     "@nrwl/web": "9.3.0",
+    "@nrwl/workspace": "9.3.0",
+    "@testing-library/react": "9.4.0",
+    "@types/express": "4.17.0",
+    "@types/faker": "^4.1.12",
+    "@types/jest": "25.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "~8.9.4",
+    "@types/ramda": "^0.27.6",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
-    "@nrwl/eslint-plugin-nx": "9.3.0",
-    "@typescript-eslint/parser": "2.19.2",
+    "@types/redis": "^2.8.22",
+    "@types/uuid": "^8.0.0",
+    "@types/yup": "^0.29.2",
     "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
-    "@nrwl/node": "9.3.0",
-    "@types/express": "4.17.0"
+    "faker": "^4.1.0",
+    "jest": "25.2.3",
+    "prettier": "2.0.4",
+    "ts-jest": "25.2.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.8.3"
   }
 }
