--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "purify-ts": "^0.15.1",
     "ramda": "^0.27.0",
     "react": "16.12.0",
@@ -47,20 +50,23 @@
     "@nrwl/web": "9.3.0",
     "@nrwl/workspace": "9.3.0",
     "@testing-library/react": "9.4.0",
-    "@types/express": "4.17.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
     "@types/faker": "^4.1.12",
     "@types/jest": "25.1.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.0",
     "@types/node": "~8.9.4",
     "@types/ramda": "^0.27.6",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/redis": "^2.8.22",
     "@types/uuid": "^8.0.0",
-    "@types/yup": "^0.29.2",
+    "@types/yup": "^0.26.32",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
-    "dotenv": "6.2.0",
+    "dotenv": "^8.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
