--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
     "morgan": "^1.10.0",
+    "pg": "^8.2.1",
     "purify-ts": "^0.15.1",
     "ramda": "^0.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "redis": "^3.0.2",
+    "supertest": "^4.0.2",
     "uuid": "^8.1.0",
     "yup": "^0.29.1"
   },
@@ -62,6 +65,7 @@
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/redis": "^2.8.22",
+    "@types/supertest": "^2.0.9",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.26.32",
     "@typescript-eslint/eslint-plugin": "2.19.2",
@@ -75,6 +79,7 @@
     "eslint-plugin-react-hooks": "2.3.0",
     "faker": "^4.1.0",
     "jest": "25.2.3",
+    "jest-runner-groups": "^2.0.1",
     "prettier": "2.0.4",
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
