--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@paralogs/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@paralogs/shared": ["libs/shared/src/index.ts"],
-      "@paralogs/back-shared": ["libs/back-shared/src/index.ts"]
+      "@paralogs/back-shared": ["libs/back-shared/src/index.ts"],
+      "@paralogs/front-core": ["libs/front-core/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
