--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.14.0",
     "document-register-element": "1.13.1",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
+    "formik": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "morgan": "^1.10.0",
@@ -40,6 +45,8 @@
     "ramda": "^0.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "redis": "^3.0.2",
     "redux-observable": "^1.2.0",
     "supertest": "^4.0.2",
@@ -66,13 +73,14 @@
     "@types/ramda": "^0.27.6",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redis": "^2.8.22",
     "@types/supertest": "^2.0.9",
     "@types/uuid": "^8.0.0",
     "@types/yup": "^0.26.32",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
-    "dotenv": "^8.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
