--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
       "@paralogs/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@paralogs/shared": ["libs/shared/src/index.ts"],
       "@paralogs/back-shared": ["libs/back-shared/src/index.ts"],
-      "@paralogs/front-core": ["libs/front-core/src/index.ts"]
+      "@paralogs/front-core": ["libs/front-core/src/index.ts"],
+      "@paralogs/test-helpers": ["libs/test-helpers/src/index.ts"],
+      "@paralogs/back/test-helpers": ["libs/back/test-helpers/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
