--- a/libs/auth/interface/tsconfig.lib.json
+++ b/libs/auth/interface/tsconfig.lib.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "types": ["node", "jest"]
+    "outDir": "../../../dist/out-tsc",
+    "types": []
   },
   "exclude": ["**/*.spec.ts"],
   "include": ["**/*.ts"]
