--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,11 @@
       "@paralogs/back/test-helpers": ["libs/back/test-helpers/src/index.ts"],
       "@paralogs/back/shared": ["libs/back/shared/src/index.ts"],
       "@paralogs/auth/interface": ["libs/auth/interface/src/index.ts"],
-      "@paralogs/logbook/interfaces": ["libs/logbook/interfaces/src/index.ts"]
+      "@paralogs/logbook/interfaces": ["libs/logbook/interfaces/src/index.ts"],
+      "@paralogs/auth/domain": ["libs/auth/domain/src/index.ts"],
+      "@paralogs/auth/secondary-adapters": [
+        "libs/auth/secondary-adapters/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
