--- a/apps/back-auth/tsconfig.app.json
+++ b/apps/back-auth/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node"]
+    "types": ["node", "webpack-env"]
   },
   "exclude": ["**/*.spec.ts", "**/*testHelpers.ts"],
   "include": ["**/*.ts"]
