--- a/apps/back-auth/tsconfig.spec.json
+++ b/apps/back-auth/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["webpack-env","jest", "node"]
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
