--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/redis": "^2.8.22",
     "@types/supertest": "^2.0.9",
     "@types/uuid": "^8.0.0",
+    "@types/webpack-env": "^1.15.2",
     "@types/yup": "^0.26.32",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
