--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
+    "test:all": "nx run-many --target=test --all --runInBand",
+    "lint:all": " nx run-many --target=lint --all",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
