--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "start": "nx serve",
+    "serve:front": "nx serve front",
+    "serve:auth": "nx serve api-auth",
+    "serve:logbook": "nx serve api-logbook",
     "build": "nx build",
     "test:all": "nx run-many --target=test --all --runInBand",
     "lint:all": " nx run-many --target=lint --all",
