--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "serve:logbook": "nx serve api-logbook",
     "build": "nx build",
     "test:all": "nx run-many --target=test --all --runInBand",
+    "test:api-auth": "nx test api-auth --runInBand",
+    "test:auth-adapters": "nx test auth-secondary-adapters --runInBand",
     "lint:all": " nx run-many --target=lint --all",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
     "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
+    "affected:test": "nx affected:test --runInBand",
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
