refactor hash to be in Password VO

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "serve:front": "nx serve front",
-    "serve:auth": "nx serve api-auth",
-    "serve:logbook": "nx serve api-logbook",
+    "docker-dev-up": "docker-compose -f docker-compose.dev.yml up",
+    "docker-test-up": "docker-compose -f docker-compose.test.yml -p paralogs-test up",
+    "serve:front": "nx serve front --watch",
+    "serve:auth": "nx serve api-auth --watch",
+    "serve:logbook": "nx serve api-logbook --watch",
     "build": "nx build",
     "test:all": "nx run-many --target=test --all --runInBand",
     "test:api-auth": "nx test api-auth --runInBand",
@@ -19,6 +21,7 @@
     "affected:e2e": "nx affected:e2e",
     "affected:test": "nx affected:test --runInBand",
     "affected:lint": "nx affected:lint",
+    "affected:check": "npm run  affected:lint && npm run affected:test",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
     "format": "nx format:write",
