--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,4 +13,19 @@ services:
       - ./pgdata/dev:/var/lib/postgresql/data
   redis:
     image: "redis:alpine"
-
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:2.11-1.1.1
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_CREATE_TOPICS: "topic-test:1:1" # topic:partition:replicas
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.1.12
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
