--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nx": "nx",
     "docker-dev-up": "docker-compose -f docker-compose.dev.yml up",
     "docker-test-up": "docker-compose -f docker-compose.test.yml -p paralogs-test up",
+    "docker-ci": "docker-compose -f docker-compose.ci.yml up --build --abort-on-container-exit --remove-orphans",
     "serve:front": "nx serve front --watch",
     "serve:auth": "nx serve api-auth --watch",
     "serve:logbook": "nx serve api-logbook --watch",
@@ -37,6 +38,7 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.3.6",
+    "@types/kafkajs": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
@@ -45,6 +47,7 @@
     "express": "4.17.1",
     "formik": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^1.12.0",
     "knex": "^0.21.1",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
